register file added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="showcase-content">
         <h2>Start today for just Rs 499/month!</h2>
-        <a href="#" class="btn btn-xl"
+        <a href="./form.html" class="btn btn-xl"
           >REGISTER NOW<i class="fas fa-chevron-right btn-icon"></i
         ></a>
       </div>
@@ -120,7 +120,7 @@
           <li><a href="#">Investor Relations</a></li>
           <li><a href="#">Ways To Watch</a></li>
           <li><a href="#">Corporate Information</a></li>
-          <li><a href="#">NETTV Originals</a></li>
+          <li><a href="#">NEPTV Originals</a></li>
         </ul>
         <ul>
           <li><a href="#">Help Center</a></li>
