login and sign in pages

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       </div>
       <div class="showcase-content">
         <h2>Start today for just Rs 499/month!</h2>
-        <a href="./form.html" class="btn btn-xl"
+        <a href="./register.html" class="btn btn-xl"
           >REGISTER NOW<i class="fas fa-chevron-right btn-icon"></i
         ></a>
+        <h3>OR</h3>
+        <a href="login.html" class="btn btn-rounded">Sign In</a>
       </div>
     </header>
     <section class="tabs">
