--- a/index.html
+++ b/index.html
@@ -26,36 +26,36 @@
       <h2 id="tabs-heading">All the TV Shows, Movies, You Love</h2>
       <p class="tabs-subtext">Exclusive Only on NEPTV</p>
       <div class="container">
-        <div id="tab-1" class="tab-item">
+        <a href="./register.html" id="tab-1" class="tab-item">
           <p class="tab-heading">TV shows</p>
           <div id="tab-img-1"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
-        </div>
-        <div id="tab-2" class="tab-item">
+        </a>
+        <a href="./register.html" id="tab-2" class="tab-item">
           <i class="fas fa-tablet-alt fa-3x"></i>
           <p class="tab-heading">Movies</p>
           <div id="tab-img-2"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
-        </div>
-        <div id="tab-3" class="tab-item">
+        </a>
+        <a href="./register.html" id="tab-3" class="tab-item">
           <i class="fas fa-tags fa-3x"></i>
           <p class="tab-heading">Cartoons</p>
           <div id="tab-img-3"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
-        </div>
-        <div id="tab-4" class="tab-item">
+        </a>
+        <a href="./register.html" id="tab-4" class="tab-item">
           <i class="fas fa-tags fa-3x"></i>
           <p class="tab-heading">Nepali Originals</p>
           <div id="tab-img-4"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
-        </div>
+        </a>
       </div>
     </section>
 
     <div class="plans">
       <div class="text-center">
         <p class="text-lg">Choose one plan and watch everything on NEPTV.</p>
-        <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
+        <a href="register.html" class="btn btn-lg">Watch Free For 30 Days</a>
       </div>
 
       <table class="table">
