--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <div class="showcase-content">
         <h2>Start today for just Rs 499/month!</h2>
         <a href="./register.html" class="btn btn-xl"
-          >REGISTER NOW<i class="fas fa-chevron-right btn-icon"></i
-        ></a>
+          >REGISTER NOW</a>
         <h3>OR</h3>
         <a href="login.html" class="btn btn-rounded">Sign In</a>
       </div>
@@ -32,19 +31,16 @@
           <img class="logo-img" src="./assets/logo.png" alt="" />
         </a>
         <a href="./register.html" id="tab-2" class="tab-item">
-          <i class="fas fa-tablet-alt fa-3x"></i>
           <p class="tab-heading">Movies</p>
           <div id="tab-img-2"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
         </a>
         <a href="./register.html" id="tab-3" class="tab-item">
-          <i class="fas fa-tags fa-3x"></i>
           <p class="tab-heading">Cartoons</p>
           <div id="tab-img-3"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
         </a>
         <a href="./register.html" id="tab-4" class="tab-item">
-          <i class="fas fa-tags fa-3x"></i>
           <p class="tab-heading">Nepali Originals</p>
           <div id="tab-img-4"></div>
           <img class="logo-img" src="./assets/logo.png" alt="" />
@@ -115,7 +111,7 @@
     </div>
 
     <footer class="footer">
-      <p>Questions? Call Your Mom</p>
+      <p>Questions? Contact Us</p>
       <div class="footer-cols">
         <ul>
           <li><a href="#">FAQ</a></li>
