--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <footer class="footer">
-      <p>Questions? Call Your Mom</p>
+      <p>Questions? Contact Us</p>
       <div class="footer-cols">
         <ul>
           <li><a href="#">FAQ</a></li>
